compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fix_plus_operator_on_strings.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  \"hello, \" + name()\n}\n\nfn name() { \"Jak\" }\n"
---
----- BEFORE ACTION

pub fn main() {
  "hello, " + name()
   ▔▔▔▔▔▔▔▔▔▔▔↑     
}

fn name() { "Jak" }


----- AFTER ACTION

pub fn main() {
  "hello, " <> name()
}

fn name() { "Jak" }
