compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fix_truncated_segment_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  <<1, 1024:size(10)>>\n}"
---
----- BEFORE ACTION

pub fn main() {
  <<1, 1024:size(10)>>
            ↑         
}


----- AFTER ACTION

pub fn main() {
  <<1, 0:size(10)>>
}
